Initial release: MiniMax StatusBar v1.0.3
✨ Features:
- CLI tool with real-time status monitoring (10s interval)
- Claude Code integration via statusLine
- Smart color coding (green/yellow/red)
- VSCode extension with full test suite
- Complete npm package distribution

📦 Components:
- /cli: CLI tool (Node.js + Commander.js)
- /vscode-extension: VSCode extension with tests

🌐 Distribution:
- npm: minimax-status@1.0.3
- GitHub: jochenyang/minimax-status

Co-Authored-By: Jochen Yang <jochenyang@example.com>

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -49,7 +49,8 @@
     "lint": "eslint .",
     "pretest": "npm run lint",
     "test": "node ./test/runTest.js",
-    "package": "vsce package"
+    "package": "vsce package",
+    "install-test": "npm install"
   },
   "devDependencies": {
     "@types/vscode": "^1.74.0",
