Build: Fix npm package.json bin field format
npm automatically corrected the bin field format by removing the './'
prefix from paths, which is the correct npm package.json specification.

Changes:
- "minimax-status": "./cli/index.js" -> "minimax-status": "cli/index.js"
- "minimax": "./cli/index.js" -> "minimax": "cli/index.js"

This correction ensures proper CLI command installation.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.4",
   "description": "MiniMax Claude Code 使用状态监控工具",
   "bin": {
-    "minimax-status": "./cli/index.js",
-    "minimax": "./cli/index.js"
+    "minimax-status": "cli/index.js",
+    "minimax": "cli/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
