--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -1,19 +1,19 @@
 {
   "name": "minimax-status-vscode",
   "displayName": "MiniMax Status",
-  "description": "在 VS Code 状态栏显示 MiniMax Claude Code 使用状态",
-  "version": "1.0.2",
+  "description": "在 VS Code 状态栏显示 MiniMax coding-plan 使用状态",
+  "version": "1.0.3",
   "publisher": "JochenYang",
   "engines": {
-    "vscode": "^1.74.0"
+    "vscode": "^1.75.0"
   },
   "categories": [
     "Other"
   ],
+  "main": "./extension.js",
   "activationEvents": [
     "onStartupFinished"
   ],
-  "main": "./extension.js",
   "contributes": {
     "commands": [
       {
