--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -2,8 +2,9 @@
   "name": "minimax-status-vscode",
   "displayName": "MiniMax Status",
   "description": "在 VS Code 状态栏显示 MiniMax coding-plan 使用状态",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "publisher": "JochenYang",
+  "icon": "./public/MINIMAX LOGO.png",
   "engines": {
     "vscode": "^1.75.0"
   },
@@ -55,6 +56,12 @@
           "default": true,
           "description": "显示详细提示信息",
           "order": 4
+        },
+        "minimaxStatus.modelName": {
+          "type": "string",
+          "default": "",
+          "description": "选择要显示的模型（留空则使用第一个模型）",
+          "order": 5
         }
       }
     }
